--- a/index.html
+++ b/index.html
@@ -4,8 +4,117 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    
+    <div class="page-wrapper">
+        <div class="header-wrapper">
+            <div class="container">
+                <header class="header">
+                    <nav class="nav">
+                        <button class="nav-left"></button>
+                        <ul class="nav-list">
+                            <li class="nav-list-item">About Me </li>
+                            <li class="nav-list-item">My task</li>
+                            <li class="nav-list-item">Projects</li>
+                            <li class="nav-list-item">Reviews</li>
+                            <li class="nav-list-item">Contacts</li>
+                        </ul>
+                        <button class="nav-contact general-btn">Contact me </button>
+                    </nav>
+                    <div class="header-circle">
+                        <img src="/img/ульяна сайт 1.png" alt="" class="header-circle-poster">
+                        <div class="header-circle-backside"></div>
+                    </div>
+                </header>
+            </div>
+        </div>
+        <div class="main-wrapper">
+            <div class="container">
+                <main class="main">
+                    <h2 class="main-title section-title">My Task</h2>
+                    <div class="main-cards">
+                        <div class="main-cards-item">
+                            <p class="main-cards-item-desc">Satisfy the client with quality work.</p>
+                        </div>
+                        <div class="main-cards-item">
+                            <h4 class="main-cards-item-title">24 hours a day in touch</h4>
+                            <p class="main-cards-item-desc">The client always has the opportunity to get in
+ touchwith me.</p>
+                        </div>
+                        <div class="main-cards-item">
+                            <p class="main-cards-item-desc">I carry out all orders
+ in the field of design, such
+ as branding, landing, website design,logos, banners posters, business , brochures,illustrations</p>
+                            <h4 class="main-cards-item-title">Work in the field of graphic design</h4>
+                        </div>
+                    </div>
+                </main>
+            </div>
+        </div>
+        <div class="section-wrapper">
+            <div class="container">
+                <section class="section">
+                    <h2 class="section-title">Projects</h2>
+                    <div class="section-cards">
+                        <div class="section-cards-item">
+                            <img src="/img/Rectangle 22.png" alt="" class="section-cards-item-poster">
+                            <h4 class="section-cards-item-title">Business Cards</h4>
+                            <p class="section-cards-item-desc">Behance ></p>
+                        </div>
+                        <div class="section-cards-item">
+                            <img src="/img/Rectangle 23.png" alt="" class="section-cards-item-poster">
+                            <h4 class="section-cards-item-title">Website design</h4>
+                            <p class="section-cards-item-desc">Behance ></p>
+                        </div>
+                        <div class="section-cards-item">
+                            <img src="/img/Rectangle 24.png" alt="" class="section-cards-item-poster">
+                            <h4 class="section-cards-item-title">Banners</h4>
+                            <p class="section-cards-item-desc">Behance ></p>
+                        </div>
+                        <div class="section-cards-item">
+                            <img src="/img/Rectangle 25.png" alt="" class="section-cards-item-poster">
+                            <h4 class="section-cards-item-title">Branding</h4>
+                            <p class="section-cards-item-desc">Behance ></p>
+                        </div>
+                    </div>
+                    <button class="section-more general-btn">See More</button>
+                </section>
+            </div>
+        </div>
+    </div>
+    <div class="reviews-wrapper">
+        <div class="container">
+            <section class="reviews">
+                <h2 class="reviews-title section-title">Reviews</h2>
+                <div class="reviews-cards">
+                    <div class="reviews-cards-item">
+                        <img src="" alt="" class="reviews-cards-item-poster">
+                        <div class="reviws-cards-item-comment">
+                            <h4 class="reviws-cards-item-comment-author">Anna Schmidt</h4>
+                            <hr>
+                            <p class="reviws-cards-item-comment-desc">Fast quality work, good service, 24 hours on call,reasonable prices</p>
+                        </div>
+                    </div>
+                    <div class="reviews-cards-item">
+                        <img src="" alt="" class="reviews-cards-item-poster">
+                        <div class="reviws-cards-item-comment">
+                            <h4 class="reviws-cards-item-comment-author">Daria Graf</h4>
+                            <hr>
+                            <p class="reviws-cards-item-comment-desc">Creative approach, listens to the customer and considers an individual approach</p>
+                        </div>
+                    </div>
+                    <div class="reviews-cards-item">
+                        <img src="" alt="" class="reviews-cards-item-poster">
+                        <div class="reviws-cards-item-comment">
+                            <h4 class="reviws-cards-item-comment-author">Mark Spencer</h4>
+                            <hr>
+                            <p class="reviws-cards-item-comment-desc">Individual approach, good service, interesting new ideas, fast, high quality</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
 </body>
 </html>
