--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
                 </section>
             </div>
         </div>
-    </div>
-    <div class="reviews-wrapper">
+        <div class="reviews-wrapper">
         <div class="container">
             <section class="reviews">
                 <h2 class="reviews-title section-title">Reviews</h2>
@@ -112,8 +111,46 @@
                             <p class="reviws-cards-item-comment-desc">Individual approach, good service, interesting new ideas, fast, high quality</p>
                         </div>
                     </div>
+                    <div class="reviews-cooperation-container">
+                        <div class="reviews-cooperation-container-inside">
+                            <h3 class="reviews-cooperation-container-title">Let’s work together on your next Project</h3>
+                            <div class="reviews-cooperation-container-shape"></div>
+                            <p class="reviews-cooperation-container-desc">If you want to contact me for an order, click on the button and contact me</p>
+                            <img src="/img/Rectangle 29.png" alt="" class="reviews-cooperation-container-icons">
+                            <img src="/img/бихенс 1.png" alt="" class="reviews-cooperation-container-icons">
+                            <img src="/img/вотсап 1.png" alt="" class="reviews-cooperation-container-icons">
+                        </div>
+                        <button class="reviews-contact">Contact Me</button>
+                    </div>
                 </div>
             </section>
+        </div>
+        </div>
+        <div class="footer-wrapper">
+        <div class="container">
+            <footer class="footer">
+                <h4 class="footer-name">Uliana Usenko</h4>
+                <div class="footer-shape"></div>
+                <h4 class="footer-title">design services</h4>
+                <h5 class="footer-subtitle">Main page</h5>
+                <ul class="footer-list">
+                    <li class="footer-list-item">Terms Of Service </li>
+                    <li class="footer-list-item">E-mail: ulianaysenko@gmail.com</li>
+                    <li class="footer-list-item">+38(067)656-73-95</li>
+                </ul>
+            </footer>
+        </div>
+        </div>
+    </div>
+    <div class="overlay">
+        <div class="container-modal">
+            <div class="modal">
+                <h2 class="modal-title">Personal information :</h2>
+                <input type="text" class="modal-input">
+                <input type="text" class="modal-input">
+                <input type="text" class="modal-input">
+                <button class="modal-btn general-btn">Send</button>
+            </div>
         </div>
     </div>
 </body>
