--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="container">
                 <header class="header">
                     <nav class="nav">
-                        <button class="nav-left"></button>
+                        <button class="nav-left general-btn"></button>
                         <ul class="nav-list">
                             <li class="nav-list-item">About Me </li>
                             <li class="nav-list-item">My task</li>
