finished header and nav

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
                         <button class="nav-contact general-btn">Contact me </button>
                     </nav>
                     <div class="header-circle">
+                        <div class="header-circle-gradient-1"></div>
+                        <p class="header-circle-gradient-text-1">Any kind of work in the field of graphic and motion design</p>
                         <img src="/img/ульяна сайт 1.png" alt="" class="header-circle-poster">
+                        <div class="header-circle-gradient-2"></div>
+                        <p class="header-circle-gradient-text-2">Fast and quality work</p>
                         <div class="header-circle-backside"></div>
                     </div>
                 </header>
