--- a/index.html
+++ b/index.html
@@ -62,22 +62,22 @@
                     <h2 class="section-title">Projects</h2>
                     <div class="section-cards">
                         <div class="section-cards-item">
-                            <img src="/img/Rectangle 22.png" alt="" class="section-cards-item-poster">
+                            <img src="/img/Group 7.png" alt="" class="section-cards-item-poster">
                             <h4 class="section-cards-item-title">Business Cards</h4>
                             <p class="section-cards-item-desc">Behance ></p>
                         </div>
                         <div class="section-cards-item">
-                            <img src="/img/Rectangle 23.png" alt="" class="section-cards-item-poster">
+                            <img src="/img/Group 8.png" alt="" class="section-cards-item-poster">
                             <h4 class="section-cards-item-title">Website design</h4>
                             <p class="section-cards-item-desc">Behance ></p>
                         </div>
                         <div class="section-cards-item">
-                            <img src="/img/Rectangle 24.png" alt="" class="section-cards-item-poster">
+                            <img src="/img/Group 10.png" alt="" class="section-cards-item-poster">
                             <h4 class="section-cards-item-title">Banners</h4>
                             <p class="section-cards-item-desc">Behance ></p>
                         </div>
                         <div class="section-cards-item">
-                            <img src="/img/Rectangle 25.png" alt="" class="section-cards-item-poster">
+                            <img src="/img/Group 11.png" alt="" class="section-cards-item-poster">
                             <h4 class="section-cards-item-title">Branding</h4>
                             <p class="section-cards-item-desc">Behance ></p>
                         </div>
