--- a/index.html
+++ b/index.html
@@ -92,24 +92,27 @@
                 <h2 class="reviews-title section-title">Reviews</h2>
                 <div class="reviews-cards">
                     <div class="reviews-cards-item">
-                        <img src="" alt="" class="reviews-cards-item-poster">
+                        <img src="/img/Group 12.png" alt="" class="reviews-cards-item-poster reviews-1">
                         <div class="reviws-cards-item-comment">
+                            <img src="/img/Group 15.png" alt="" class="reviews-cards-item-comment-poster">
                             <h4 class="reviws-cards-item-comment-author">Anna Schmidt</h4>
                             <hr>
                             <p class="reviws-cards-item-comment-desc">Fast quality work, good service, 24 hours on call,reasonable prices</p>
                         </div>
                     </div>
                     <div class="reviews-cards-item">
-                        <img src="" alt="" class="reviews-cards-item-poster">
+                        <img src="/img/Group 13.png" alt="" class="reviews-cards-item-poster reviews-2">
                         <div class="reviws-cards-item-comment">
+                            <img src="/img/Group 16.png" alt="" class="reviews-cards-item-comment-poster">
                             <h4 class="reviws-cards-item-comment-author">Daria Graf</h4>
                             <hr>
                             <p class="reviws-cards-item-comment-desc">Creative approach, listens to the customer and considers an individual approach</p>
                         </div>
                     </div>
                     <div class="reviews-cards-item">
-                        <img src="" alt="" class="reviews-cards-item-poster">
+                        <img src="/img/Group 14.png" alt="" class="reviews-cards-item-poster reviews-3">
                         <div class="reviws-cards-item-comment">
+                            <img src="/img/Group 17.png" alt="" class="reviews-cards-item-comment-poster">
                             <h4 class="reviws-cards-item-comment-author">Mark Spencer</h4>
                             <hr>
                             <p class="reviws-cards-item-comment-desc">Individual approach, good service, interesting new ideas, fast, high quality</p>
