finished reviews container

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <div class="reviews-cards-item">
                         <img src="/img/Group 12.png" alt="" class="reviews-cards-item-poster reviews-1">
                         <div class="reviws-cards-item-comment">
-                            <img src="/img/Group 15.png" alt="" class="reviews-cards-item-comment-poster">
+                            <img src="/img/Group 15.png" alt="" class="reviews-cards-item-comment-poster reviews-text-box-1">
                             <h4 class="reviws-cards-item-comment-author">Anna Schmidt</h4>
                             <hr>
                             <p class="reviws-cards-item-comment-desc">Fast quality work, good service, 24 hours on call,reasonable prices</p>
@@ -103,7 +103,7 @@
                     <div class="reviews-cards-item">
                         <img src="/img/Group 13.png" alt="" class="reviews-cards-item-poster reviews-2">
                         <div class="reviws-cards-item-comment">
-                            <img src="/img/Group 16.png" alt="" class="reviews-cards-item-comment-poster">
+                            <img src="/img/Group 16.png" alt="" class="reviews-cards-item-comment-poster reviews-text-box-2">
                             <h4 class="reviws-cards-item-comment-author">Daria Graf</h4>
                             <hr>
                             <p class="reviws-cards-item-comment-desc">Creative approach, listens to the customer and considers an individual approach</p>
@@ -112,7 +112,7 @@
                     <div class="reviews-cards-item">
                         <img src="/img/Group 14.png" alt="" class="reviews-cards-item-poster reviews-3">
                         <div class="reviws-cards-item-comment">
-                            <img src="/img/Group 17.png" alt="" class="reviews-cards-item-comment-poster">
+                            <img src="/img/Group 17.png" alt="" class="reviews-cards-item-comment-poster reviews-text-box-3">
                             <h4 class="reviws-cards-item-comment-author">Mark Spencer</h4>
                             <hr>
                             <p class="reviws-cards-item-comment-desc">Individual approach, good service, interesting new ideas, fast, high quality</p>
@@ -120,14 +120,17 @@
                     </div>
                     <div class="reviews-cooperation-container">
                         <div class="reviews-cooperation-container-inside">
-                            <h3 class="reviews-cooperation-container-title">Let’s work together on your next Project</h3>
-                            <div class="reviews-cooperation-container-shape"></div>
-                            <p class="reviews-cooperation-container-desc">If you want to contact me for an order, click on the button and contact me</p>
-                            <img src="/img/Rectangle 29.png" alt="" class="reviews-cooperation-container-icons">
-                            <img src="/img/бихенс 1.png" alt="" class="reviews-cooperation-container-icons">
-                            <img src="/img/вотсап 1.png" alt="" class="reviews-cooperation-container-icons">
-                        </div>
-                        <button class="reviews-contact">Contact Me</button>
+                            <div class="reviews-cooperation-container-inside-main">
+                                <h3 class="reviews-cooperation-container-title">Let’s work together on your next Project</h3>
+                                <div class="reviews-cooperation-container-shape"></div>
+                                <p class="reviews-cooperation-container-desc">If you want to contact me for an order, click on the button and contact me</p>
+                                <div class="reviews-conatiner-parent-icons">
+                                    <img src="/img/reviews-container-icon-2.png" alt="" class="reviews-cooperation-container-icons reviews-cooperation-container-icon-1">
+                                    <img src="/img/reviews-container-icon-1.png" alt="" class="reviews-cooperation-container-icons reviews-cooperation-container-icon-2">
+                                    <img src="/img/reviews-container-icon-3.png" alt="" class="reviews-cooperation-container-icons reviews-cooperation-container-icon-3">
+                                </div>    
+                            </div>
+                        <button class="reviews-cooperation-container-contact">Contact Me</button>
                     </div>
                 </div>
             </section>
