Made a modal window and finished footer

--- a/index.html
+++ b/index.html
@@ -140,14 +140,15 @@
         <div class="container">
             <footer class="footer">
                 <h4 class="footer-name">Uliana Usenko</h4>
-                <div class="footer-shape"></div>
-                <h4 class="footer-title">design services</h4>
-                <h5 class="footer-subtitle">Main page</h5>
-                <ul class="footer-list">
+                <div class="footer-shape">
+                    <h4 class="footer-title">design services</h4>
+                    <h5 class="footer-subtitle">Main page</h5>
+                    <ul class="footer-list">
                     <li class="footer-list-item">Terms Of Service </li>
                     <li class="footer-list-item">E-mail: ulianaysenko@gmail.com</li>
                     <li class="footer-list-item">+38(067)656-73-95</li>
-                </ul>
+                    </ul>
+                </div>
             </footer>
         </div>
         </div>
@@ -156,12 +157,15 @@
         <div class="container-modal">
             <div class="modal">
                 <h2 class="modal-title">Personal information :</h2>
-                <input type="text" class="modal-input">
-                <input type="text" class="modal-input">
-                <input type="text" class="modal-input">
-                <button class="modal-btn general-btn">Send</button>
+                <form action="" class="modal-form">
+                    <input type="text" class="modal-form-input" placeholder="Name">
+                    <input type="text" class="modal-form-input" placeholder="Surename">
+                    <input type="text" class="modal-form-input" placeholder="E-mail">
+                    <button class="modal-form-btn general-btn">Send</button>
+                </form>
             </div>
         </div>
     </div>
+    <script src="/script.js"></script>
 </body>
 </html>
