finished mobile version for header, created burgermenu

--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
             <div class="container">
                 <header class="header">
                     <nav class="nav">
+                        <div class="nav-burgermenu-form">
+                            <div class="nav-burgermenu-form-child-1"></div>
+                            <div class="nav-burgermenu-form-child-2"></div>
+                            <div class="nav-burgermenu-form-child-3"></div>
+                        </div>
+                        <div class="nav-burgermenu">
+                            <h2 class="nav-burgermenu-title">Menu</h2>
+                            <button class="nav-burgermenu-button-1">About Me</button>
+                            <button class="nav-burgermenu-button-2">My Task</button>
+                            <button class="nav-burgermenu-button-1">Projects</button>
+                            <button class="nav-burgermenu-button-2">Reviews</button>
+                            <button class="nav-burgermenu-button-1">Contacts</button>
+                            <button class="nav-burgermenu-close">Close</button>
+                        </div>
                         <button class="nav-left general-btn"></button>
                         <ul class="nav-list">
                             <li class="nav-list-item">About Me </li>
