--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@
                             <div class="nav-burgermenu-form-child-2"></div>
                             <div class="nav-burgermenu-form-child-3"></div>
                         </div>
-                        <div class="nav-burgermenu">
-                            <h2 class="nav-burgermenu-title">Menu</h2>
-                            <button class="nav-burgermenu-button-1">About Me</button>
-                            <button class="nav-burgermenu-button-2">My Task</button>
-                            <button class="nav-burgermenu-button-1">Projects</button>
-                            <button class="nav-burgermenu-button-2">Reviews</button>
-                            <button class="nav-burgermenu-button-1">Contacts</button>
-                            <button class="nav-burgermenu-close">Close</button>
+                        <div class="nav-burgermenu-overlay">
+                            <div class="nav-burgermenu">
+                                <h2 class="nav-burgermenu-title">Menu</h2>
+                                <button class="nav-burgermenu-button-1">About Me</button>
+                                <button class="nav-burgermenu-button-2">My Task</button>
+                                <button class="nav-burgermenu-button-1">Projects</button>
+                                <button class="nav-burgermenu-button-2">Reviews</button>
+                                <button class="nav-burgermenu-button-1">Contacts</button>
+                                <button class="nav-burgermenu-close">Close</button>
+                            <div>
                         </div>
                         <button class="nav-left general-btn"></button>
                         <ul class="nav-list">
