--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
     <div class="page-wrapper">
         <div class="header-wrapper">
@@ -26,8 +28,9 @@
                                 <button class="nav-burgermenu-button-2">Reviews</button>
                                 <button class="nav-burgermenu-button-1">Contacts</button>
                                 <button class="nav-burgermenu-close">Close</button>
-                            <div>
+                            </div>
                         </div>
+
                         <button class="nav-left general-btn"></button>
                         <ul class="nav-list">
                             <li class="nav-list-item">About Me </li>
@@ -40,7 +43,8 @@
                     </nav>
                     <div class="header-circle">
                         <div class="header-circle-gradient-1"></div>
-                        <p class="header-circle-gradient-text-1">Any kind of work in the field of graphic and motion design</p>
+                        <p class="header-circle-gradient-text-1">Any kind of work in the field of graphic and motion
+                            design</p>
                         <img src="/img/ульяна сайт 1.png" alt="" class="header-circle-poster">
                         <div class="header-circle-gradient-2"></div>
                         <p class="header-circle-gradient-text-2">Fast and quality work</p>
@@ -60,12 +64,13 @@
                         <div class="main-cards-item">
                             <h4 class="main-cards-item-title">24 hours a day in touch</h4>
                             <p class="main-cards-item-desc">The client always has the opportunity to get in
- touch with me.</p>
+                                touch with me.</p>
                         </div>
                         <div class="main-cards-item">
                             <p class="main-cards-item-desc">I carry out all orders
- in the field of design, such
- as branding, landing, website design,logos, banners posters, business , brochures,illustrations</p>
+                                in the field of design, such
+                                as branding, landing, website design,logos, banners posters, business ,
+                                brochures,illustrations</p>
                             <h4 class="main-cards-item-title">Work in the field of graphic design</h4>
                         </div>
                     </div>
@@ -103,70 +108,81 @@
             </div>
         </div>
         <div class="reviews-wrapper">
-        <div class="container">
-            <section class="reviews">
-                <h2 class="reviews-title section-title">Reviews</h2>
-                <div class="reviews-cards">
-                    <div class="reviews-cards-item">
-                        <img src="/img/Group 12.png" alt="" class="reviews-cards-item-poster reviews-1">
-                        <div class="reviws-cards-item-comment">
-                            <img src="/img/Group 15.png" alt="" class="reviews-cards-item-comment-poster reviews-text-box-1">
-                            <h4 class="reviws-cards-item-comment-author">Anna Schmidt</h4>
-                            <hr>
-                            <p class="reviws-cards-item-comment-desc">Fast quality work, good service, 24 hours on call,reasonable prices</p>
-                        </div>
-                    </div>
-                    <div class="reviews-cards-item">
-                        <img src="/img/Group 13.png" alt="" class="reviews-cards-item-poster reviews-2">
-                        <div class="reviws-cards-item-comment">
-                            <img src="/img/Group 16.png" alt="" class="reviews-cards-item-comment-poster reviews-text-box-2">
-                            <h4 class="reviws-cards-item-comment-author">Daria Graf</h4>
-                            <hr>
-                            <p class="reviws-cards-item-comment-desc">Creative approach, listens to the customer and considers an individual approach</p>
-                        </div>
-                    </div>
-                    <div class="reviews-cards-item">
-                        <img src="/img/Group 14.png" alt="" class="reviews-cards-item-poster reviews-3">
-                        <div class="reviws-cards-item-comment">
-                            <img src="/img/Group 17.png" alt="" class="reviews-cards-item-comment-poster reviews-text-box-3">
-                            <h4 class="reviws-cards-item-comment-author">Mark Spencer</h4>
-                            <hr>
-                            <p class="reviws-cards-item-comment-desc">Individual approach, good service, interesting new ideas, fast, high quality</p>
-                        </div>
-                    </div>
-                    <div class="reviews-cooperation-container">
-                        <div class="reviews-cooperation-container-inside">
-                            <div class="reviews-cooperation-container-inside-main">
-                                <h3 class="reviews-cooperation-container-title">Let’s work together on your next Project</h3>
-                                <div class="reviews-cooperation-container-shape"></div>
-                                <p class="reviews-cooperation-container-desc">If you want to contact me for an order, click on the button and contact me</p>
-                                <div class="reviews-conatiner-parent-icons">
-                                    <img src="/img/reviews-container-icon-2.png" alt="" class="reviews-cooperation-container-icons reviews-cooperation-container-icon-1">
-                                    <img src="/img/reviews-container-icon-1.png" alt="" class="reviews-cooperation-container-icons reviews-cooperation-container-icon-2">
-                                    <img src="/img/reviews-container-icon-3.png" alt="" class="reviews-cooperation-container-icons reviews-cooperation-container-icon-3">
-                                </div>    
+            <div class="container">
+                <section class="reviews">
+                    <h2 class="reviews-title section-title">Reviews</h2>
+                    <div class="reviews-cards">
+                        <div class="reviews-cards-item">
+                            <img src="/img/Group 12.png" alt="" class="reviews-cards-item-poster reviews-1">
+                            <div class="reviws-cards-item-comment">
+                                <img src="/img/Group 15.png" alt=""
+                                    class="reviews-cards-item-comment-poster reviews-text-box-1">
+                                <h4 class="reviws-cards-item-comment-author">Anna Schmidt</h4>
+                                <hr>
+                                <p class="reviws-cards-item-comment-desc">Fast quality work, good service, 24 hours on
+                                    call,reasonable prices</p>
                             </div>
-                        <button class="reviews-cooperation-container-contact">Contact Me</button>
-                    </div>
-                </div>
-            </section>
-        </div>
+                        </div>
+                        <div class="reviews-cards-item">
+                            <img src="/img/Group 13.png" alt="" class="reviews-cards-item-poster reviews-2">
+                            <div class="reviws-cards-item-comment">
+                                <img src="/img/Group 16.png" alt=""
+                                    class="reviews-cards-item-comment-poster reviews-text-box-2">
+                                <h4 class="reviws-cards-item-comment-author">Daria Graf</h4>
+                                <hr>
+                                <p class="reviws-cards-item-comment-desc">Creative approach, listens to the customer and
+                                    considers an individual approach</p>
+                            </div>
+                        </div>
+                        <div class="reviews-cards-item">
+                            <img src="/img/Group 14.png" alt="" class="reviews-cards-item-poster reviews-3">
+                            <div class="reviws-cards-item-comment">
+                                <img src="/img/Group 17.png" alt=""
+                                    class="reviews-cards-item-comment-poster reviews-text-box-3">
+                                <h4 class="reviws-cards-item-comment-author">Mark Spencer</h4>
+                                <hr>
+                                <p class="reviws-cards-item-comment-desc">Individual approach, good service, interesting
+                                    new ideas, fast, high quality</p>
+                            </div>
+                        </div>
+                        <div class="reviews-cooperation-container">
+                            <div class="reviews-cooperation-container-inside">
+                                <div class="reviews-cooperation-container-inside-main">
+                                    <h3 class="reviews-cooperation-container-title">Let’s work together on your next
+                                        Project</h3>
+                                    <div class="reviews-cooperation-container-shape"></div>
+                                    <p class="reviews-cooperation-container-desc">If you want to contact me for an
+                                        order, click on the button and contact me</p>
+                                    <div class="reviews-conatiner-parent-icons">
+                                        <img src="/img/reviews-container-icon-2.png" alt=""
+                                            class="reviews-cooperation-container-icons reviews-cooperation-container-icon-1">
+                                        <img src="/img/reviews-container-icon-1.png" alt=""
+                                            class="reviews-cooperation-container-icons reviews-cooperation-container-icon-2">
+                                        <img src="/img/reviews-container-icon-3.png" alt=""
+                                            class="reviews-cooperation-container-icons reviews-cooperation-container-icon-3">
+                                    </div>
+                                </div>
+                                <button class="reviews-cooperation-container-contact">Contact Me</button>
+                            </div>
+                        </div>
+                </section>
+            </div>
         </div>
         <div class="footer-wrapper">
-        <div class="container">
-            <footer class="footer">
-                <h4 class="footer-name">Uliana Usenko</h4>
-                <div class="footer-shape">
-                    <h4 class="footer-title">design services</h4>
-                    <h5 class="footer-subtitle">Main page</h5>
-                    <ul class="footer-list">
-                    <li class="footer-list-item">Terms Of Service </li>
-                    <li class="footer-list-item">E-mail: ulianaysenko@gmail.com</li>
-                    <li class="footer-list-item">+38(067)656-73-95</li>
-                    </ul>
-                </div>
-            </footer>
-        </div>
+            <div class="container">
+                <footer class="footer">
+                    <h4 class="footer-name">Uliana Usenko</h4>
+                    <div class="footer-shape">
+                        <h4 class="footer-title">design services</h4>
+                        <h5 class="footer-subtitle">Main page</h5>
+                        <ul class="footer-list">
+                            <li class="footer-list-item">Terms Of Service </li>
+                            <li class="footer-list-item">E-mail: ulianaysenko@gmail.com</li>
+                            <li class="footer-list-item">+38(067)656-73-95</li>
+                        </ul>
+                    </div>
+                </footer>
+            </div>
         </div>
     </div>
     <div class="overlay">
@@ -184,4 +200,5 @@
     </div>
     <script src="/script.js"></script>
 </body>
+
 </html>
