almost finished phone classes

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                                 touch with me.</p>
                         </div>
                         <div class="main-cards-item">
-                            <p class="main-cards-item-desc">I carry out all orders
+                            <p class="main-cards-item-desc-sm-font">I carry out all orders
                                 in the field of design, such
                                 as branding, landing, website design,logos, banners posters, business ,
                                 brochures,illustrations</p>
-                            <h4 class="main-cards-item-title">Work in the field of graphic design</h4>
+                            <h4 class="main-cards-item-title main-cards-item-title-sm-font">Work in the field of graphic design</h4>
                         </div>
                     </div>
                 </main>
@@ -92,12 +92,12 @@
                             <h4 class="section-cards-item-title">Website design</h4>
                             <p class="section-cards-item-desc">Behance ></p>
                         </div>
-                        <div class="section-cards-item">
+                        <div class="section-cards-item section-cards-item-switch">
                             <img src="/img/Group 10.png" alt="" class="section-cards-item-poster">
                             <h4 class="section-cards-item-title">Banners</h4>
                             <p class="section-cards-item-desc">Behance ></p>
                         </div>
-                        <div class="section-cards-item">
+                        <div class="section-cards-item section-cards-item-switch">
                             <img src="/img/Group 11.png" alt="" class="section-cards-item-poster">
                             <h4 class="section-cards-item-title">Branding</h4>
                             <p class="section-cards-item-desc">Behance ></p>
@@ -112,36 +112,37 @@
                 <section class="reviews">
                     <h2 class="reviews-title section-title">Reviews</h2>
                     <div class="reviews-cards">
-                        <div class="reviews-cards-item">
+                        <div class="reviews-cards-item reviews-cards-item-1">
                             <img src="/img/Group 12.png" alt="" class="reviews-cards-item-poster reviews-1">
-                            <div class="reviws-cards-item-comment">
+                            <div class="reviews-cards-item-comment reviws-cards-item-commen-1">
                                 <img src="/img/Group 15.png" alt=""
-                                    class="reviews-cards-item-comment-poster reviews-text-box-1">
-                                <h4 class="reviws-cards-item-comment-author">Anna Schmidt</h4>
-                                <hr>
-                                <p class="reviws-cards-item-comment-desc">Fast quality work, good service, 24 hours on
+                                    class="reviews-cards-item-comment-poster reviews-cards-item-comment-poster-1">
+                                <h4 class="reviews-cards-item-comment-author reviews-cards-item-comment-author-1">Anna Schmidt</h4>
+                                <div class="reviews-cards-item-comment-line-1"></div>
+                                <p class="reviews-cards-item-comment-desc reviews-cards-item-comment-desc-1">Fast quality work, good service, 24 hours on
                                     call,reasonable prices</p>
                             </div>
                         </div>
-                        <div class="reviews-cards-item">
-                            <img src="/img/Group 13.png" alt="" class="reviews-cards-item-poster reviews-2">
-                            <div class="reviws-cards-item-comment">
+                        <div class="reviews-cards-item reviews-cards-item-2">
+                            <img src="/img/Group 14.png" alt="" class="reviews-cards-item-poster reviews-2">
+                            <div class="reviws-cards-item-comment reviws-cards-item-comment-2">
                                 <img src="/img/Group 16.png" alt=""
-                                    class="reviews-cards-item-comment-poster reviews-text-box-2">
-                                <h4 class="reviws-cards-item-comment-author">Daria Graf</h4>
-                                <hr>
-                                <p class="reviws-cards-item-comment-desc">Creative approach, listens to the customer and
-                                    considers an individual approach</p>
+                                    class="reviews-cards-item-comment-poster reviews-cards-item-comment-poster-2">
+                                <h4 class="reviews-cards-item-comment-author reviews-cards-item-comment-author-2">Daria Graf</h4>
+                                <div class="reviews-cards-item-comment-line-2"></div>
+                                <div class="reviews-cards-item-comment-desc reviews-cards-item-comment-desc-2">Creative approach, listens to the customer and
+                                    considers an individual approach
+                                    </div>
                             </div>
                         </div>
-                        <div class="reviews-cards-item">
-                            <img src="/img/Group 14.png" alt="" class="reviews-cards-item-poster reviews-3">
+                        <div class="reviews-cards-item reviews-cards-item-3">
+                            <img src="/img/Group 13.png" alt="" class="reviews-cards-item-poster reviews-3">
                             <div class="reviws-cards-item-comment">
                                 <img src="/img/Group 17.png" alt=""
-                                    class="reviews-cards-item-comment-poster reviews-text-box-3">
-                                <h4 class="reviws-cards-item-comment-author">Mark Spencer</h4>
-                                <hr>
-                                <p class="reviws-cards-item-comment-desc">Individual approach, good service, interesting
+                                    class="reviews-cards-item-comment-poster reviews-cards-item-comment-poster-3">
+                                <h4 class="reviews-cards-item-comment-author">Mark Spencer</h4>
+                                <div class="reviews-cards-item-comment-line-3"></div>
+                                <p class="reviews-cards-item-comment-desc">Individual approach, good service, interesting
                                     new ideas, fast, high quality</p>
                             </div>
                         </div>
